fix: update form helper-text top spacing (#29)

--- a/src/styles/components/form/_form.scss
+++ b/src/styles/components/form/_form.scss
@@ -111,7 +111,7 @@
 
     display: inline-block;
     width: 100%;
-    margin-top: $spacing-2x-small;
+    margin-top: $spacing-3x-small;
     color: $color-gray-50;
   }
 
